fixed overlaping labels on smaller screens

--- a/components/CustomButton.css
+++ b/components/CustomButton.css
@@ -1,17 +1,10 @@
 .customButton {
     font-family: celtichand;
-    font-size: 3rem;
-    display: inline-block;
-    border-radius: 10px;
+    font-size: 3.6vh;
     transition: 0.6s all;
     text-align: center;
+    vertical-align: middle;
     font-weight: bold;
-    height: 60px;
-    line-height: 60px;
-    padding: 0 20px;
-    border-width: 0 4px 5px 0;
-    border-radius: 5px;
-    background-clip: padding-box;
     color: white;
     text-shadow: 0px 0px 15px #00f3ff;
     cursor: pointer;
@@ -28,6 +21,7 @@
 
 .customButton>label {
     cursor: pointer;
+    line-height: 6.6vh;
 }
 
 .wrapper.visible {
